# serializer version: 1
# name: test_converter_basic_test
  '''
  <h1>Basic Page</h1>
  <h2>Heading 2</h2>
  <p>Some text for heading 2</p>
  <h3>Heading 3-1</h3>
  <p>Some text for heading 3-1</p>
  <h3>Heading 3-2</h3>
  <p>Some test for heading 3-2</p>
  <ul>
  <li>An</li>
  <li>unordered</li>
  <li>list</li>
  </ul>
  <ol>
  <li>An</li>
  <li>Ordered</li>
  <li>List</li>
  </ol>
  <pre><code class="language-less">&gt; This is an info
  </code></pre>
  <pre><code class="language-less">&gt; Note: This is a note
  </code></pre>
  <pre><code class="language-less">&gt; Warning: This is a warning
  </code></pre>
  '''
# ---
# name: test_converter_html
  '''
  <h2>Heading 2</h2>
  <p>Some text for heading 2</p>
  <h3>Heading 3-1</h3>
  <p>Some text for heading 3-1</p>
  <h3>Heading 3-2</h3>
  <p>Some test for heading 3-2</p>
  <ul>
  <li>An</li>
  <li>unordered</li>
  <li>list</li>
  </ul>
  <ol>
  <li>An</li>
  <li>Ordered</li>
  <li>List</li>
  </ol>
  <ac:structured-macro ac:name="code"><ac:parameter ac:name="theme">Midnight</ac:parameter><ac:parameter ac:name="linenumbers">true</ac:parameter><ac:parameter ac:name="language">less</ac:parameter><ac:plain-text-body><![CDATA[> This is an info
  ]]></ac:plain-text-body></ac:structured-macro>
  <ac:structured-macro ac:name="code"><ac:parameter ac:name="theme">Midnight</ac:parameter><ac:parameter ac:name="linenumbers">true</ac:parameter><ac:parameter ac:name="language">less</ac:parameter><ac:plain-text-body><![CDATA[> Note: This is a note
  ]]></ac:plain-text-body></ac:structured-macro>
  <ac:structured-macro ac:name="code"><ac:parameter ac:name="theme">Midnight</ac:parameter><ac:parameter ac:name="linenumbers">true</ac:parameter><ac:parameter ac:name="language">less</ac:parameter><ac:plain-text-body><![CDATA[> Warning: This is a warning
  ]]></ac:plain-text-body></ac:structured-macro>
  '''
# ---
# name: test_converter_html_advanced
  '''
  <p><a href="#heading-3-2">Link to Heading</a></p>
  <h2>Heading 2</h2>
  <p>Some text for heading 2</p>
  <h3>Heading 3-1</h3>
  <p>Some text for heading 3-1</p>
  <h3>Heading 3-2</h3>
  <p>Some test for heading 3-2</p>
  <ul>
  <li>An</li>
  <li>unordered</li>
  <li>list</li>
  </ul>
  <ol>
  <li>An</li>
  <li>Ordered</li>
  <li>List</li>
  </ol>
  <ul>
  <li>This list is nested</li>
  <li>This item has children<ul>
  <li>This is a child of item 2</li>
  <li>Another child of item 2</li>
  </ul>
  </li>
  <li>This is the third item</li>
  </ul>
  <ol>
  <li>This list is nested</li>
  <li>This item has children<ol>
  <li>This is a child of item 2</li>
  <li>Another child of item 2</li>
  </ol>
  </li>
  <li>This is the third item</li>
  </ol>
  <p>Text above Info</p>
  <p><ac:structured-macro ac:name="info"><ac:rich-text-body><p>This should be an info block</p></ac:rich-text-body></ac:structured-macro></p>
  <p>Text above warning</p>
  <p><ac:structured-macro ac:name="note"><ac:rich-text-body><p>This should be a warning block</p></ac:rich-text-body></ac:structured-macro></p>
  <p>Text above success</p>
  <p><ac:structured-macro ac:name="tip"><ac:rich-text-body><p>This should be a success block</p></ac:rich-text-body></ac:structured-macro></p>
  <p>Text above error</p>
  <p><ac:structured-macro ac:name="warning"><ac:rich-text-body><p>This should be a error block</p></ac:rich-text-body></ac:structured-macro></p>
  <p>Text above Note</p>
  <ac:adf-extension><ac:adf-node type="panel"><ac:adf-attribute key="panel-type">note</ac:adf-attribute><ac:adf-content>This should be a note block</ac:adf-content></ac:adf-node></ac:adf-extension>
  <ac:structured-macro ac:name="code"><ac:parameter ac:name="theme">Midnight</ac:parameter><ac:parameter ac:name="linenumbers">true</ac:parameter><ac:parameter ac:name="language">none</ac:parameter><ac:plain-text-body><![CDATA[This is a code block with on language assigned
  ]]></ac:plain-text-body></ac:structured-macro>
  <ac:structured-macro ac:name="code"><ac:parameter ac:name="theme">Midnight</ac:parameter><ac:parameter ac:name="linenumbers">true</ac:parameter><ac:parameter ac:name="language">javascript</ac:parameter><ac:plain-text-body><![CDATA[var block = has_javascript_lang();
  ]]></ac:plain-text-body></ac:structured-macro>
  '''
# ---
# name: test_converter_html_advanced_with_toc
  '''
  <ac:structured-macro ac:name="toc">
  <ac:parameter ac:name="printable">true</ac:parameter>
  <ac:parameter ac:name="style">disc</ac:parameter><ac:parameter ac:name="maxLevel">5</ac:parameter>
  <ac:parameter ac:name="minLevel">1</ac:parameter><ac:parameter ac:name="class">rm-contents</ac:parameter>
  <ac:parameter ac:name="exclude"></ac:parameter>
  <ac:parameter ac:name="type">list</ac:parameter><ac:parameter ac:name="outline">false</ac:parameter>
  <ac:parameter ac:name="include"></ac:parameter>
  </ac:structured-macro>
  <p><a href="#heading-3-2">Link to Heading</a></p>
  <h2>Heading 2</h2>
  <p>Some text for heading 2</p>
  <h3>Heading 3-1</h3>
  <p>Some text for heading 3-1</p>
  <h3>Heading 3-2</h3>
  <p>Some test for heading 3-2</p>
  <ul>
  <li>An</li>
  <li>unordered</li>
  <li>list</li>
  </ul>
  <ol>
  <li>An</li>
  <li>Ordered</li>
  <li>List</li>
  </ol>
  <ul>
  <li>This list is nested</li>
  <li>This item has children<ul>
  <li>This is a child of item 2</li>
  <li>Another child of item 2</li>
  </ul>
  </li>
  <li>This is the third item</li>
  </ul>
  <ol>
  <li>This list is nested</li>
  <li>This item has children<ol>
  <li>This is a child of item 2</li>
  <li>Another child of item 2</li>
  </ol>
  </li>
  <li>This is the third item</li>
  </ol>
  <p>Text above Info</p>
  <p><ac:structured-macro ac:name="info"><ac:rich-text-body><p>This should be an info block</p></ac:rich-text-body></ac:structured-macro></p>
  <p>Text above warning</p>
  <p><ac:structured-macro ac:name="note"><ac:rich-text-body><p>This should be a warning block</p></ac:rich-text-body></ac:structured-macro></p>
  <p>Text above success</p>
  <p><ac:structured-macro ac:name="tip"><ac:rich-text-body><p>This should be a success block</p></ac:rich-text-body></ac:structured-macro></p>
  <p>Text above error</p>
  <p><ac:structured-macro ac:name="warning"><ac:rich-text-body><p>This should be a error block</p></ac:rich-text-body></ac:structured-macro></p>
  <p>Text above Note</p>
  <ac:adf-extension><ac:adf-node type="panel"><ac:adf-attribute key="panel-type">note</ac:adf-attribute><ac:adf-content>This should be a note block</ac:adf-content></ac:adf-node></ac:adf-extension>
  <ac:structured-macro ac:name="code"><ac:parameter ac:name="theme">Midnight</ac:parameter><ac:parameter ac:name="linenumbers">true</ac:parameter><ac:parameter ac:name="language">none</ac:parameter><ac:plain-text-body><![CDATA[This is a code block with on language assigned
  ]]></ac:plain-text-body></ac:structured-macro>
  <ac:structured-macro ac:name="code"><ac:parameter ac:name="theme">Midnight</ac:parameter><ac:parameter ac:name="linenumbers">true</ac:parameter><ac:parameter ac:name="language">javascript</ac:parameter><ac:plain-text-body><![CDATA[var block = has_javascript_lang();
  ]]></ac:plain-text-body></ac:structured-macro>
  '''
# ---
# name: test_toc_convert
  '<h1>First heading</h1> <p><ac:structured-macro ac:name="toc" ac:schema-version="1"/></p> <h2>Second heading</h2>'
# ---
